--- a/Random_Variables.ipynb
+++ b/Random_Variables.ipynb
@@ -107,6 +107,53 @@
     "\n",
     "**Note** The value of parameters are estimated using i.i.d samples and statistical inference."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Important Continuos Random Variables\n",
+    "\n",
+    "I used the terms ${P(X=x)}$ and ${f(x)}$ interchangeably in previous section, which can't be done in this one.\n",
+    "\n",
+    "#### Uniform Distribution:\n",
+    "${X\\sim Uniform(a,b)}$ if ${f(x) = \\frac{1}{b-a}}$ for ${x\\in [a,b]}$ and 0 otherwise.\n",
+    "\n",
+    "Parameters ${\\rightarrow}$ ${a,b}$.\n",
+    "\n",
+    "#### Normal (Gaussian):\n",
+    "${X\\sim N(\\mu, \\sigma^{2})}$ if ${f(x) = \\large \\frac{1}{\\sigma(2\\pi)^{0.5}}e^{-\\frac{(x-\\mu)^{2}}{2\\sigma^{2}}}}$ where ${\\mu\\in R}$ and ${\\sigma>0}$. ${X}$ has **standard Normal Distribution** if ${\\mu =0}$ and ${\\sigma=1}$.\n",
+    "\n",
+    "Parameters ${\\rightarrow}$ ${\\mu,\\sigma}$.\n",
+    "\n",
+    "#### Exponential Distribution:\n",
+    "${X\\sim Exp(\\beta)}$ if ${f(x) = \\large \\frac{e^{\\large -x/\\beta}}{\\beta}}$ for ${x>0}$.\n",
+    "\n",
+    "Parameters ${\\rightarrow}$ ${\\beta}$.\n",
+    "\n",
+    "#### Gamma Distribution:\n",
+    "**Gamma function** is defined as ${\\Gamma(\\alpha) = \\int_{0}^{\\infty}y^{\\alpha-1}e^{-y}dy}$ for ${x>0}$. Note that ${\\Gamma(1)=1}$. Also ${\\Gamma(\\alpha) = (\\alpha-1)\\Gamma(\\alpha-1)}$. Therefore, if ${\\alpha\\in I}$, then ${\\Gamma(\\alpha) = (\\alpha-1)!}$.\n",
+    "\n",
+    "${X}$ is said to have Gamma Distribution denoted by ${X\\sim Gamma(\\alpha,\\beta)}$ if ${f(x)= \\large\\frac{x^{\\alpha-1}e^{\\frac{-x}{\\beta}}}{\\beta^{\\alpha}\\Gamma(\\alpha)}}$. Note that if ${\\alpha=1}$, Gamma distribution turns into exponential distribution. \n",
+    "\n",
+    "**Note**: If ${X_{i}\\sim Gamma(\\alpha,\\beta)}$ are independent then, ${\\sum_{i=1}^{n}X_{i}\\sim Gamma(\\sum_{i=1}^{n}\\alpha_{i},\\beta)}$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bivariate Distributions\n",
+    "**Definition**: For a pair of discrete random variables ${X}$ and ${Y}$, the **joint mass distribution** is defined as ${f(x,y)=P(X=x\\,and\\, Y=y)}$. ${P(X=x\\,and\\,Y=y)}$ is consicely written as ${P(X=x,Y=y)}$. \n",
+    "\n",
+    "**Definition**: In case of continuous random variables ${X}$ and ${Y}$, ${f(x,y)}$ is a PDF for ${X,Y}$ if\n",
+    "\n",
+    "- ${f(x,y) \\geq 0}$ for all ${(x,y)}$\n",
+    "- ${\\int_{-\\infty}^{\\infty}\\int_{-\\infty}^{\\infty} f(x,y)dxdy =1}$\n",
+    "- ${P((X,Y)\\in A) = \\int\\int_{A}f(x,y)dxdy}$. Think of ${A}$ as an area in a plane of two coordinate axes.\n",
+    "\n",
+    "Joint CDF is defined as ${F_{X,Y}(x,y)= P(X\\leq x, Y\\leq y)}$"
+   ]
   }
  ],
  "metadata": {
