--- a/Random_Variables.ipynb
+++ b/Random_Variables.ipynb
@@ -91,7 +91,7 @@
     "Parameters ${\\rightarrow}$ ${p}$\n",
     "\n",
     "#### The Binomial Distribution\n",
-    "Let's flip a coin n times. This coin has the probability ${p}$ of showing heads and ${1-p}$ of showing tails. Define ${X}$ as the number of times heads came up in n tosses. Thus ${P(X=x) = C_{x}^{n}p^{x}(1-p)^{n-x}}$. ${X}$ is called Binomial random variable and we write ${X\\sim Binomial(n,p)}$. If ${X_{1} \\sim Binomial(n_{1},p)}$ and ${X_{1} \\sim Binomial(n_{2},p)}$ then, ${X_{1}+X_{2}\\sim Binomial(n_{1}+n_{2},p)}$. Think of this in terms of the experiment mentioned above. ${X_{1}}$,${X_{2}}$ are number of heads when that biased coin is tossed ${n_{1}}$ and ${n_{2}}$ times respectively, then ${X_{1} + X_{2}}$ is number of times heads comes up when the coin is tossed ${n_{1} + n_{2}}$ times.\n",
+    "Let's flip a coin n times. This coin has the probability ${p}$ of showing heads and ${1-p}$ of showing tails. Define ${X}$ as the number of times heads came up in n tosses. Thus ${P(X=x) = C_{x}^{n}p^{x}(1-p)^{n-x}}$. ${X}$ is called Binomial random variable and we write ${X\\sim Binomial(n,p)}$. If ${X_{1} \\sim Binomial(n_{1},p)}$ and ${X_{2} \\sim Binomial(n_{2},p)}$ then, ${X_{1}+X_{2}\\sim Binomial(n_{1}+n_{2},p)}$. Think of this in terms of the experiment mentioned above. ${X_{1}}$,${X_{2}}$ are number of heads when that biased coin is tossed ${n_{1}}$ and ${n_{2}}$ times respectively, then ${X_{1} + X_{2}}$ is number of times heads comes up when the coin is tossed ${n_{1} + n_{2}}$ times.\n",
     "\n",
     "Parameters ${\\rightarrow}$ ${n\\,and\\,p}$\n",
     "\n",
@@ -152,8 +152,30 @@
     "- ${\\int_{-\\infty}^{\\infty}\\int_{-\\infty}^{\\infty} f(x,y)dxdy =1}$\n",
     "- ${P((X,Y)\\in A) = \\int\\int_{A}f(x,y)dxdy}$. Think of ${A}$ as an area in a plane of two coordinate axes.\n",
     "\n",
-    "Joint CDF is defined as ${F_{X,Y}(x,y)= P(X\\leq x, Y\\leq y)}$"
+    "Joint CDF is defined as ${F_{X,Y}(x,y)= P(X\\leq x, Y\\leq y)}$\n",
+    "\n",
+    "### Marginal Distributions\n",
+    "\n",
+    "#### Discrete Case:\n",
+    "If ${X}$ and ${Y}$ and random variables with joint distribution ${f(x,y)}$, then **marginal function for X** is defined as ${f_{X}(x)= P(X=x)= \\sum_{y}P(X=x, Y=y)= \\sum_{y}f(x,y)}$. Marginal function for Y is defined similarly.\n",
+    "\n",
+    "#### Continuous Case:\n",
+    "${f_{X}(x)= \\int f(x,y)dy}$, ${f_{Y}(y)= \\int f(x,y)dx}$\n",
+    "\n",
+    "\n",
+    "### Independent Random Variables. \n",
+    "${\\newcommand{\\indep}{\\perp \\!\\!\\! \\perp}}$\n",
+    "Two variables ${X}$ and ${Y}$ are independent if ${P(X\\in A,Y\\in B)= P(X\\in A)P(Y\\in B)}$ and we write ${X\\indep Y}$.\n",
+    "\n",
+    "**Theorem**:  ${X\\indep Y}$ iff ${f_{X,Y}(x,y)= f_{X}(x)f_{Y}(y)}$ for all  ${x\\,and\\, y}$\n",
+    "\n",
+    "**Theorem**: If range of ${X}$ and ${Y}$ is a (possibly infinite) rectangle then if ${f_{X,Y}(x,y)= g(x)h(y)}$, then ${X\\indep Y}$. (${g(x)\\,and\\,h(y)}$ are not necessarily PDF)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
