--- a/Random_Variables.ipynb
+++ b/Random_Variables.ipynb
@@ -132,8 +132,7 @@
     "Parameters ${\\rightarrow}$ ${\\beta}$.\n",
     "\n",
     "#### Gamma Distribution:\n",
-    "**Gamma function** is defined as ${\\Gamma(\\alpha) = \\int_{0}^{\\infty}y^{\\alpha-1}e^{-y}dy}$ for ${x>0}$. Note that ${\\Gamma(1)=1}$. Also ${\\Gamma(\\alpha) = (\\alpha-1)\\Gamma(\\alpha-1)}$. Therefore, if ${\\alpha\\in I}$, then ${\\Gamma(\\alpha) = (\\alpha-1)!}$.\n",
-    "\n",
+    "**Gamma function** is defined as ${\\Gamma(\\alpha) = \\int_{0}^{\\infty}y^{\\alpha-1}e^{-y}dy}$ for ${x>0}$. Note that ${\\Gamma(1)=1}$. Also ${\\Gamma(\\alpha) = (\\alpha-1)\\Gamma(\\alpha-1)}$. Therefore, if ${\\alpha\\in Z}$, then ${\\Gamma(\\alpha) = (\\alpha-1)!}$.\n",
     "${X}$ is said to have Gamma Distribution denoted by ${X\\sim Gamma(\\alpha,\\beta)}$ if ${f(x)= \\large\\frac{x^{\\alpha-1}e^{\\frac{-x}{\\beta}}}{\\beta^{\\alpha}\\Gamma(\\alpha)}}$. Note that if ${\\alpha=1}$, Gamma distribution turns into exponential distribution. \n",
     "\n",
     "**Note**: If ${X_{i}\\sim Gamma(\\alpha,\\beta)}$ are independent then, ${\\sum_{i=1}^{n}X_{i}\\sim Gamma(\\sum_{i=1}^{n}\\alpha_{i},\\beta)}$\n"
@@ -169,13 +168,39 @@
     "\n",
     "**Theorem**:  ${X\\indep Y}$ iff ${f_{X,Y}(x,y)= f_{X}(x)f_{Y}(y)}$ for all  ${x\\,and\\, y}$\n",
     "\n",
-    "**Theorem**: If range of ${X}$ and ${Y}$ is a (possibly infinite) rectangle then if ${f_{X,Y}(x,y)= g(x)h(y)}$, then ${X\\indep Y}$. (${g(x)\\,and\\,h(y)}$ are not necessarily PDF)"
+    "**Theorem**: If range of ${X}$ and ${Y}$ is a (possibly infinite) rectangle then if ${f_{X,Y}(x,y)= g(x)h(y)}$, then ${X\\indep Y}$. (${g(x)\\,and\\,h(y)}$ are not necessarily PDF)\n",
+    "\n",
+    "### Conditional Distributions\n",
+    "The **conditional probability mass function** and **conditional proabability density function** are defined as ${f_{X\\mid Y}(x\\mid y) = \\large\\frac{f(x,y)}{f_{X}(x)}}$ "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Multivariate Distributions and i.i.d Samples\n",
+    "\n",
+    "Let ${X = (X_{1}, X_{2},...,X_{n})}$ where ${X_{1}, X_{2},...,X_{n}}$ are random variables. The pdf is denoted as ${f(x_{1}, x_{2},...,x_{n})}$. The marginals and conditionals can be defined similarly to the bivariate case. We say that ${X_{1}, X_{2},...,X_{n}}$ are independent if for every ${(A_{1}, A_{2},...,A_{n})}$, ${P(X_{1}\\in A_{1},...,P(X_{n}\\in A_{n}) = \\Pi_{i=1}^{n}P(X_{i}\\in A_{i})}$.\n",
+    "\n",
+    "**Definition:** If ${X_{1}, X_{2},...,X_{n}}$ are independent and each has the same marginal distribution with CDF ${F}$ then we say that ${X_{1}, X_{2},...,X_{n}}$ are i.i.d and write ${X_{1}, X_{2},...,X_{n} \\sim F}$ or we can also write ${X_{1}, X_{2},...,X_{n}\\sim f}$ where ${f}$ is the probabaility function of ${F}$. We call ${X_{1}, X_{2},...,X_{n}}$ a random sample of size ${n}$ from ${F}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Two Important Multivariate Distribution\n",
+    "\n",
+    "#### Multinomial\n",
+    "Let's say a urn has balls of k colors where k is a positive integer. We pick a ball from the urn, note it's color and place it back in the urn. We do this a total of n times. Let ${X_{i}}$ denote the number of times we picked up ball with color ${i}$ where ${i\\in \\{1,2,...,k\\}}$. Let ${p_{i}}$ denote the probability of picking up ball of color ${i}$. Let ${p = (p_{1}, p_{2},...,p_{k})}$. ${\\sum_{i=1}^{k} X_{i}= n}$. Let ${X = (X_{1}, X_{2},...,X_{k})}$. We say that ${X}$ has a multinomial distribution, written as ${X\\sim Multinomial(n,p)}$. The pdf is ${f(x_{1}, x_{2},...,x_{k})= C_{x_{1}...x_{k}}^{n}p^{x_{1}}...p^{x_{k}}}$. \n",
+    "\n",
+    "**Lemma:** If ${X\\sim Multinomial(n,p)}$, where ${X = (X_{1}, X_{2},...,X_{k})}$ and ${p = (p_{1}, p_{2},...,p_{k})}$, then ${X_{i}\\sim Binomial(n,p_{i})}$. We can't say that ${X_{1}, X_{2},...,X_{k}}$ are i.i.d because niether are they independent nor they have the same distribution parameters.\n",
+    "\n",
+    "#### Multivariate Normal\n",
+    "Univariate normal had parameters ${\\mu}$ and ${\\sigma}$ which were real numbers. In multivariate case ${\\mu}$ and ${\\sigma}$ are a vector and matrix respectively. Let's say ${X = (X_{1}, X_{2},...,X_{k})}$ where ${X_{1}, X_{2},...,X_{k} \\sim N(0,1)}$ and independent. Indeed, ${X_{1}, X_{2},...,X_{k}}$ are i.i.d samples of size k from a standard normal distribution. ${\\therefore f(x)= \\Pi_{i=1}^{k}f(x_{i})= \\large\\frac{1}{(2\\pi)^{0.5k}}e^{-0.5\\sum_{j=1}^{k}x_{i}^{2}}= \\large\\frac{1}{(2\\pi)^{0.5k}}e^{-0.5x^{T}x}}$.\n",
+    "\n",
+    "![](images/multivariate_normal.JPG)"
+   ]
   }
  ],
  "metadata": {
