--- a/Random_Variables.ipynb
+++ b/Random_Variables.ipynb
@@ -201,6 +201,19 @@
     "\n",
     "![](images/multivariate_normal.JPG)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Tranformations of Random Variable.\n",
+    "\n",
+    "Suppose ${X}$ is a random variable with pdf ${f_{X}}$ and CDF ${F_{X}}$ both of which are known. Let ${Y=r(X)}$.\n",
+    "${F_{Y}(y)= P(Y\\leq y)= P(r(X)\\leq y)= P({x}: r(x)\\leq y) = \\int_{A_{y}}f_{X}(x)dx}$ where ${A_{y}= \\{x: r(x)\\leq y\\}}$. ${f_{Y}(y)}$ is then ${F'_{Y}(y)}$.\n",
+    "\n",
+    "for discrete case:\n",
+    "${f_{Y}(y)= P(Y=y)= P(r(X)= y)= P(\\{x: r(x)=y\\})= P(X\\in r^{-1}(y))}$"
+   ]
   }
  ],
  "metadata": {
